<resources>

    <string name="app_name">Xeniaa Collection</string>
    <string name="directory_name">GI Collection</string>
    <string name="version">1.0.0</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="want_to_logout">Are you sure, You want to logout?</string>
    <string name="want_to_continue">Are you sure, You want to Continue</string>
    <string name="loading">Loading...</string>

    <string name="pickup">PICKUP</string>
    <string name="handshake_delivery">HANDSHAKE/DELIVERY</string>
    <string name="return_handshake_delivery">RETURN HANDSHAKE/DELIVERY</string>
    <string name="return_pickup">RETURN PICKUP</string>
    <string name="rto">RTO</string>
    <string name="cash_handover">CASH HANDOVER</string>
    <string name="product_list">View Product</string>
    <string name="attempt_Details">Disposition Details</string>
    <string name="view_attempt">View Attempt</string>
    <string name="reschedule">Reschedule</string>
    <string name="collect_summary">Collect Summary</string>
    <string name="signature">Signature</string>
    <string name="reschedule_datetime">Reshedule Date &amp; Time</string>

    <!--Alert Message-->

    <string name="select_subreason">Select Sub Reason</string>
    <string name="select_date">Select Date</string>
    <string name="enter_remarks">Enter Remarks</string>
    <string name="enter_reason">Enter Reason</string>

    <!--EditText Hint-->
    <string name="hint_username">User Name</string>
    <string name="hint_password">Password</string>
    <string name="enter_no">Enter Mobile Number</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="select_app">Select 1mg or GoFynd to Login</string>
    <string name="enter_valid_no">Enter Valid mobile Number</string>
    <string name="enable_gps">Your GPS seems to be disabled, Please enable it</string>
    <string name="nopickup_available">No Pickup Available</string>
    <string name="nocollect_available">No Collection Available</string>
    <string name="nodelivery_available">No Delivery Available</string>
    <string name="nodata_available">No Data Available</string>
    <string name="shipment_date">Shipment Date: </string>
    <string name="lead_date">Lead Date: </string>
    <string name="bag_id">Bag ID : </string>
    <string name="pickup_zone">Pickup Zone: </string>
    <string name="delivery_zone">Delivery Zone : </string>
    <string name="total_pcs">Total Pcs : </string>
    <string name="invoice">Invoice : </string>
    <string name="tracking_stopped">Location Tracking stopped</string>
    <string name="tracking_started">Location Tracking started</string>
    <string name="check_internet">Please Check your Internet</string>
    <string name="start_msg">Please click start button to start work</string>
    <string name="old_pass">OLD PASSWORD</string>
    <string name="new_pass">NEW PASSWORD</string>
    <string name="confirm_pass">CONFIRM PASSWORD</string>

    <!--Buttons Name-->
    <string name="signin">Sign In</string>
    <string name="rememberme">Remember Me</string>
    <string name="upload">Upload</string>
    <string name="server_empty">Server Empty</string>
    <string name="product_not_found">Product Not Found</string>
    <string name="server_error">Server Error</string>
    <string name="timeout_error">TimeOut Error</string>
    <string name="select_reason">Select Reason</string>
    <string name="enter_bagid">Enter Bag ID</string>
    <string name="search">Search</string>
    <string name="mobileno_notfound">Mobile Number Not Found</string>
    <string name="SAUserID">SAUserId</string>

    <string-array name="nav_item_activity_titles">
        <item>Dashboard</item>
        <item>Pickup</item>
        <item>Handshake/Delivery</item>
        <item>RTO</item>
        <item>Cash Handover</item>
        <item>Shipment History</item>
        <item>Cash History</item>
        <item>View OTP</item>
        <item>Upload</item>
        <item>FE Summary Report</item>
        <item>Change Password</item>
        <item>Logout</item>
    </string-array>

    <string-array name="nav_item_kodak">
        <item>Dashboard</item>
        <item>Kotak Pickup</item>
        <item>Kotak Direct</item>
        <item>NACH</item>
        <item>HDB Pickup</item>
        <item>HDB Direct</item>
        <item>Kotak Flexi</item>
        <item>IDFC Direct</item>
        <item>RBL Direct</item>
        <item>TATA Pickup</item>
        <item>TATA Direct</item>
        <item>L &amp; T Direct</item>
        <item>HDFC Direct</item>
        <item>Startek IDFC Pickup</item>
        <item>Startek IDFC Direct</item>
        <item>Bajaj Direct</item>
        <item>KVB Pickup</item>
        <item>KVB Direct</item>
        <item>Equitas Pickup</item>
        <item>Equitas Direct</item>
        <item>Cash Handover</item>
        <item>Upload</item>
        <item>FE Summary Report</item>
        <item>Change Password</item>
        <item>Logout</item>
    </string-array>

    <!--Menu name-->
    <string name="home">Dashboard</string>
    <string name="kodak_pickup">Kotak Pickup</string>
    <string name="kodak_direct">Kotak Direct</string>
    <string name="nach">NACH</string>
    <string name="hdb_pickup">HDB Pickup</string>
    <string name="hdb_direct">HDB Direct</string>
    <string name="idfc_pickup">Kotak Flexi</string>
    <string name="idfc_direct">IDFC Direct</string>
    <string name="rbl_direct">RBL Direct</string>
    <string name="tata_pickup">TATA Pickup</string>
    <string name="tata_direct">TATA Direct</string>
    <string name="L_and_T">L &amp; T Direct</string>
    <string name="hdfc_direct">HDFC Direct</string>
    <string name="startek_IDFC_Pickup">Startek IDFC Pickup</string>
    <string name="startek_IDFC_Direct">Startek IDFC Direct</string>
    <string name="bajaj_Direct">Bajaj Direct</string>
    <string name="kvb_pickup">KVB Pickup</string>
    <string name="kvb_direct">KVB Direct</string>
    <string name="equitas_pickup">Equitas Pickup</string>
    <string name="equitas_direct">Equitas Direct</string>
    <string name="cashhandover">Cash Handover</string>
    <string name="menu_upload">Upload</string>
    <string name="fe_report">FE Summary Report</string>
    <string name="chng_pass">Change Password</string>
    <string name="logout">Logout</string>
    <string name="map_apikey">AIzaSyBeigI5iExywf7LkBeLCkFBzjk-xFJYuTA</string>

</resources>
