<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/asd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorPrimary"></FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/pickup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/ico_deliveryman" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/pickup"
                        android:textColor="@color/secondary"
                        android:textSize="13dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/handshake_delivery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:visibility="visible">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/ico_deliveryman" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/handshake_delivery"
                        android:textColor="@color/secondary"
                        android:textSize="13dp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/rto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/ico_deliveryman" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/rto"
                        android:textColor="@color/secondary"
                        android:textSize="13dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cashhandover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/ico_deliveryman" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/cash_handover"
                        android:textColor="@color/secondary"
                        android:textSize="13dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/ico_deliveryman" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/rto"
                        android:textColor="@color/secondary"
                        android:textSize="13dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/ico_deliveryman" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:gravity="center"
                        android:text="@string/cash_handover"
                        android:textColor="@color/secondary"
                        android:textSize="13dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>